--- a/.github/workflows/uint256_t.yml
+++ b/.github/workflows/uint256_t.yml
@@ -1,6 +1,11 @@
 name: uint256_t
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+      - dev
 
 jobs:
   build:
